--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,15 @@ dependencies:
     sdk: flutter
 
 
+
+
+
+
+
+  http: ^0.13.3
+  image_picker: ^0.8.5+3
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -45,6 +54,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
